--- a/res/layout/create_photo.xml
+++ b/res/layout/create_photo.xml
@@ -1,159 +1,186 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:geekui="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"	android:orientation="vertical"
-    android:background="@color/background" >
+    android:layout_height="match_parent"	android:orientation="vertical" >
 
     <include layout="@layout/common_title" />
 
-    <LinearLayout
-        android:id="@+id/intro_info"
-        android:layout_width="fill_parent"
-        android:layout_height="100dip"
-        android:background="@drawable/bg_achievement_detail"
-        android:orientation="vertical"
-        android:paddingTop="20dip" >
-
-        <TextView
-            android:id="@+id/input_photo_title"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="#00000000"
-            android:gravity="left|top"
-            android:text="testest testetst testetst testetst testetst testetst testetst"
-            android:textColor="#ffffff" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/photo_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12.5dp"
-        android:gravity="center"
-        android:orientation="horizontal" >
-
-        <ImageView
-            android:id="@+id/take_photo"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:src="@drawable/post_takephoto" />
-
-        <ImageView
-            android:id="@+id/upload_photo"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dip"
-            android:src="@drawable/post_upload" />
-
-        <ImageView
-            android:id="@+id/back_photo_show"
-            android:layout_width="match_parent"
-            android:layout_height="200dip"
-            android:background="@drawable/frame"
-            android:scaleType="fitCenter"
-            android:visibility="gone" />
-    </LinearLayout>
-        
-    <TextView
-        android:id="@+id/words_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginLeft="12dip"
-        android:layout_marginRight="12dip"
-        android:layout_gravity="right"
-        android:text="140 words left" />
-
-    <EditText
-        android:id="@+id/input_photo_comments"
-        android:layout_width="fill_parent"
-        android:layout_height="63.5dp"
-        android:layout_marginLeft="12dip"
-        android:layout_marginRight="12dip"
-        android:background="@drawable/round_rect_with_boder"
-        android:gravity="left|top"
-        android:hint="input description"
-        android:padding="10dip" />
-    
-    <TextView android:id="@+id/location"
-        android:layout_width="fill_parent"
-        android:layout_height="20dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="12dip"
-        android:layout_marginRight="12dip"
-        android:drawableLeft="@drawable/icon_location_red"
-        android:drawablePadding="6dp"
-        android:text="Tokyo, Japan"
-        android:textSize="12sp"
-        android:textColor="#666666"
-        android:background="@color/black"
-        />
-    
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="12dip"
-        android:layout_marginRight="12dip"
-        android:orientation="horizontal" >
-
-        <RadioButton
-            android:id="@+id/location_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:button="@drawable/post_facebook" >
-        </RadioButton>
-
-        <RadioButton
-            android:id="@+id/tag_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:button="@drawable/post_twitter"
-            android:checked="true" >
-        </RadioButton>
-    </RadioGroup>
-    
-    <ImageView
-        android:id="@+id/create_btn"
-        android:layout_width="280dip"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dip"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/post_publish"
-        android:gravity="center" />
-    
-    <ImageView
-        android:id="@+id/guide_hand_post"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:src="@drawable/image_guide_hand"
-        android:visibility="gone" />
-
-    <!-- guide -->
-    <RelativeLayout
-        android:id="@+id/guide_layer"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="#a9000000"
-        android:visibility="gone" >
-
-        <ImageView
-            android:id="@+id/guide_hand"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/image_guide_hand" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="80dip"
-            android:src="@drawable/guide_click_home_item" />
-    </RelativeLayout>
+    <ScrollView android:layout_width="fill_parent"
+	        android:layout_height="fill_parent">
+	        
+	    <LinearLayout android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"
+	        android:orientation="vertical">
+	        
+	        <LinearLayout
+	            android:id="@+id/intro_info"
+	            android:layout_width="fill_parent"
+	            android:layout_height="121dip"
+	            android:background="@drawable/bg_achievement_detail"
+	            android:orientation="vertical"
+	            android:paddingTop="20dip" >
+	
+	            <TextView
+	                android:id="@+id/input_photo_title"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_gravity="center_horizontal"
+	                android:gravity="left|top"
+	                android:text="TESTEST TESTETST TITLE"
+	                android:textColor="#ee5458" />
+	
+	            <TextView
+	                android:id="@+id/input_photo_description"
+	                android:layout_width="fill_parent"
+	                android:layout_height="fill_parent"
+	                android:background="#00000000"
+	                android:gravity="left|top"
+	                android:text="testest testetst testetst testetst testetst testetst testetst"
+	                android:textColor="#ffffff" />
+	        </LinearLayout>
+	
+	        <LinearLayout
+	            android:id="@+id/photo_layout"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="12.5dp"
+	            android:gravity="center"
+	            android:orientation="horizontal" >
+	
+	            <ImageView
+	                android:id="@+id/take_photo"
+	                android:layout_width="0dp"
+	                android:layout_height="wrap_content"
+	                android:layout_weight="1"
+	                android:src="@drawable/post_takephoto" />
+	
+	            <ImageView
+	                android:id="@+id/upload_photo"
+	                android:layout_width="0dp"
+	                android:layout_height="wrap_content"
+	                android:layout_marginLeft="20dip"
+	                android:layout_weight="1"
+	                android:src="@drawable/post_upload" />
+	
+	            <ImageView
+	                android:id="@+id/back_photo_show"
+	                android:layout_width="match_parent"
+	                android:layout_height="200dip"
+	                android:scaleType="fitCenter"
+	                android:visibility="gone" />
+	        </LinearLayout>
+	
+	        <TextView
+	            android:id="@+id/words_text"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="right"
+	            android:layout_marginLeft="12dip"
+	            android:layout_marginRight="12dip"
+	            android:layout_marginTop="24dp"
+	            android:text="140 words left" />
+	
+	        <EditText
+	            android:id="@+id/input_photo_comments"
+	            android:layout_width="fill_parent"
+	            android:layout_height="63.5dp"
+	            android:layout_marginLeft="12dip"
+	            android:layout_marginRight="12dip"
+	            android:layout_marginTop="4dp"
+	            android:background="@drawable/round_rect_with_boder"
+	            android:gravity="left|top"
+	            android:hint="input description"
+	            android:padding="10dip"
+	            android:textColor="@color/edit_text_color"
+	            android:textSize="12sp" />
+	
+	        <TextView
+	            android:id="@+id/location"
+	            android:layout_width="fill_parent"
+	            android:layout_height="20dp"
+	            android:layout_gravity="center_horizontal"
+	            android:layout_marginLeft="12dip"
+	            android:layout_marginRight="12dip"
+	            android:background="@color/black"
+	            android:drawableLeft="@drawable/icon_location_red"
+	            android:drawablePadding="6dp"
+	            android:text="Tokyo, Japan"
+	            android:textColor="#666666"
+	            android:textSize="12sp" />
+	
+	        <RadioGroup
+	            android:id="@+id/radioGroup"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="12dip"
+	            android:layout_marginRight="12dip"
+	            android:layout_marginTop="8dp"
+	            android:orientation="horizontal" >
+	
+	            <RadioButton
+	                android:id="@+id/location_btn"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:button="@drawable/post_facebook" >
+	            </RadioButton>
+	
+	            <RadioButton
+	                android:id="@+id/tag_btn"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_marginLeft="12dp"
+	                android:button="@drawable/post_twitter" >
+	            </RadioButton>
+	        </RadioGroup>
+	
+	        <com.photowall.widget.typeface.TypefaceTextView
+	            android:id="@+id/create_btn"
+	            android:layout_width="fill_parent"
+	            android:layout_height="48dp"
+	            android:layout_gravity="center_horizontal"
+	            android:layout_marginLeft="12dip"
+	            android:layout_marginRight="12dip"
+	            android:layout_marginTop="10dip"
+	            android:layout_marginBottom="12dp"
+	            android:background="@drawable/post_publish"
+	            android:gravity="center"
+	            android:text="PUBLISH"
+	            android:textColor="@color/next_color"
+	            geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
+	
+	        <ImageView
+	            android:id="@+id/guide_hand_post"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_centerInParent="true"
+	            android:src="@drawable/image_guide_hand"
+	            android:visibility="gone" />
+	
+	        <!-- guide -->
+	
+	        <RelativeLayout
+	            android:id="@+id/guide_layer"
+	            android:layout_width="fill_parent"
+	            android:layout_height="fill_parent"
+	            android:background="#a9000000"
+	            android:visibility="gone" >
+	
+	            <ImageView
+	                android:id="@+id/guide_hand"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_centerInParent="true"
+	                android:src="@drawable/image_guide_hand" />
+	
+	            <ImageView
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_alignParentBottom="true"
+	                android:layout_marginBottom="80dip"
+	                android:src="@drawable/guide_click_home_item" />
+	        </RelativeLayout>
+	
+	    </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
