--- a/res/layout/post_story_details_layout.xml
+++ b/res/layout/post_story_details_layout.xml
@@ -1,216 +1,223 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-	android:background="@color/background" >
+    android:orientation="vertical" >
 	
-    <LinearLayout android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        
-        <include layout="@layout/common_title"/>
-        
-        <LinearLayout android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4.5dp"
-            android:layout_marginLeft="9.5dp"
-            android:orientation="horizontal">
-            
-            <ImageView
-                android:id="@+id/user_name_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:padding="1dp"
-                android:background="@drawable/round_rect_with_boder"
-                android:src="@drawable/dummy_post_user_photo" />
-            
-            <TextView
-                android:id="@+id/user_name_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="7dp"
-                android:layout_gravity="center_vertical"
-                android:text="username"
-                android:textColor="@color/text_color_black"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-        
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/round_rect_with_boder"
-            android:orientation="vertical"
-             >
-
-            <ImageView
-                android:id="@+id/show_img"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6.5dp"
-                android:layout_marginLeft="6.5dp"
-                android:layout_marginRight="6.5dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/dummy_post_photo" />
-
-            <TextView
-                android:id="@+id/show_text"
-                android:layout_width="fill_parent"
-                android:layout_height="0dp"
-                android:layout_marginBottom="4dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginLeft="6.5dp"
-                android:layout_marginRight="6.5dp"
-                android:layout_weight="1"
-                android:text="Miss Smith?This is Mister Jones here. Could you please cancel my appointments for today?I&apos;m feeling under the weather so I&apos;m going to stay home. "
-                android:textColor="#363637"
-                android:textSize="10sp" />
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="6.5dp"
-                android:gravity="bottom" >
-
-                <TextView
-                    android:id="@+id/show_location"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:drawableStart="@drawable/postwall_location"
-                    android:text="New York City"
-                    android:textColor="#ADADAD"
-                    android:textSize="6sp" />
-
-                <TextView
-                    android:id="@+id/show_favorite"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:drawableStart="@drawable/postwall_icon_like"
-                    android:text="100"
-                    android:textColor="#ADADAD"
-                    android:textSize="6sp" />
-
-                <TextView
-                    android:id="@+id/show_comment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:drawableStart="@drawable/postwall_icon_comment"
-                    android:text="100"
-                    android:textColor="#ADADAD"
-                    android:textSize="6sp" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|right"
-                    android:src="@drawable/post_large_liked" />
-            </LinearLayout>
-        </LinearLayout>
-        
-        <LinearLayout 
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="21dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:gravity="center_vertical">
-            
-            <EditText android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:background="@drawable/input_comment"
-                android:hint="Say something..."
-                android:padding="4dp"/>
-            
-            <Button android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:layout_marginLeft="10.5dp"
-                android:text="POST"
-                android:textColor="@color/next_color"
-                android:background="@drawable/btn_post_detail" />
-        </LinearLayout>
-        
-        <LinearLayout android:id="@+id/comment_container"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="26.5dp"
-            android:layout_marginLeft="14dp"
-            android:layout_marginRight="14dp"
-            android:orientation="vertical">
-            
-            <RelativeLayout android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="21.5dp">
-                
-                <ImageView
-                    android:id="@+id/comment_user_name_image"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/round_rect_with_boder"
-                    android:padding="1dp"
-                    android:src="@drawable/dummy_post_user_photo" />
-
-                <TextView
-                    android:id="@+id/comment_user_name_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_below="@+id/comment_user_name_image"
-                    android:text="username"
-                    android:textColor="@color/text_color_black"
-                    android:textSize="11sp" />
-                
-                <TextView
-                    android:id="@+id/comment_content"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/comment_user_name_image"
-                    android:layout_marginLeft="18dp"
-                    android:text="Delicacies are likely to gather together to attract and provide convenience for customers"
-                    android:textColor="#363637"
-                    android:textSize="11sp" />
-
-            </RelativeLayout>
-            
-            <RelativeLayout android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="21.5dp">
-                
-                <ImageView
-                    android:id="@+id/comment_user_name_image"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/round_rect_with_boder"
-                    android:padding="1dp"
-                    android:src="@drawable/dummy_post_user_photo" />
-
-                <TextView
-                    android:id="@+id/comment_user_name_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_below="@+id/comment_user_name_image"
-                    android:text="username"
-                    android:textColor="@color/text_color_black"
-                    android:textSize="11sp" />
-                
-                <TextView
-                    android:id="@+id/comment_content"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/comment_user_name_image"
-                    android:layout_marginLeft="18dp"
-                    android:text="Delicacies are likely to gather together to attract and provide convenience for customers"
-                    android:textColor="#363637"
-                    android:textSize="11sp" />
-
-            </RelativeLayout>
-        </LinearLayout>
-        
-    </LinearLayout>
-</ScrollView>
+    <include layout="@layout/common_title"/>
+    
+    <ScrollView  android:layout_width="fill_parent"
+	        android:layout_height="fill_parent" >
+	        
+	    <LinearLayout android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"
+	        android:orientation="vertical">
+	        
+	        <LinearLayout android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="4.5dp"
+	            android:layout_marginLeft="9.5dp"
+	            android:orientation="horizontal">
+	            
+	            <ImageView
+	                android:id="@+id/user_name_image"
+	                android:layout_width="40dp"
+	                android:layout_height="40dp"
+	                android:padding="1dp"
+	                android:background="@drawable/round_rect_with_boder"
+	                android:src="@drawable/dummy_post_user_photo" />
+	            
+	            <TextView
+	                android:id="@+id/user_name_text"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_marginLeft="7dp"
+	                android:layout_gravity="center_vertical"
+	                android:text="username"
+	                android:textColor="@color/text_color_black"
+	                android:textSize="16sp" />
+	
+	        </LinearLayout>
+	        
+	        <LinearLayout
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="5dp"
+	            android:layout_marginRight="5dp"
+	            android:layout_marginTop="5dp"
+	            android:background="@drawable/round_rect_with_boder"
+	            android:orientation="vertical"
+	             >
+	
+	            <ImageView
+	                android:id="@+id/show_img"
+	                android:layout_width="fill_parent"
+	                android:layout_height="wrap_content"
+	                android:layout_marginTop="6.5dp"
+	                android:layout_marginLeft="6.5dp"
+	                android:layout_marginRight="6.5dp"
+	                android:scaleType="center"
+	                android:src="@drawable/dummy_post_photo" />
+	
+	            <TextView
+	                android:id="@+id/show_text"
+	                android:layout_width="fill_parent"
+	                android:layout_height="0dp"
+	                android:layout_marginBottom="4dp"
+	                android:layout_marginTop="4dp"
+	                android:layout_marginLeft="6.5dp"
+	                android:layout_marginRight="6.5dp"
+	                android:layout_weight="1"
+	                android:text="Miss Smith?This is Mister Jones here. Could you please cancel my appointments for today?I&apos;m feeling under the weather so I&apos;m going to stay home. "
+	                android:textColor="#363637"
+	                android:textSize="10sp" />
+	
+	            <LinearLayout
+	                android:layout_width="fill_parent"
+	                android:layout_height="wrap_content"
+	                android:layout_marginLeft="6.5dp"
+	                android:layout_marginBottom="4dp"
+	                android:gravity="bottom" >
+	
+	                <TextView
+	                    android:id="@+id/show_location"
+	                    android:layout_width="0dp"
+	                    android:layout_height="wrap_content"
+	                    android:layout_weight="1"
+	                    android:drawableStart="@drawable/postwall_location"
+	                    android:text="New York City"
+	                    android:textColor="#ADADAD"
+	                    android:textSize="10sp" />
+	
+	                <TextView
+	                    android:id="@+id/show_favorite"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_marginLeft="8dp"
+	                    android:drawableStart="@drawable/postwall_icon_like"
+	                    android:text="100"
+	                    android:textColor="#ADADAD"
+	                    android:textSize="10sp" />
+	
+	                <TextView
+	                    android:id="@+id/show_comment"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_marginLeft="8dp"
+	                    android:drawableStart="@drawable/postwall_icon_comment"
+	                    android:text="100"
+	                    android:textColor="#ADADAD"
+	                    android:textSize="10sp" />
+	
+	                <ImageView
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_gravity="bottom|right"
+	                    android:src="@drawable/post_large_liked" />
+	            </LinearLayout>
+	        </LinearLayout>
+	        
+	        <LinearLayout 
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="21dp"
+	            android:layout_marginLeft="5dp"
+	            android:layout_marginRight="5dp"
+	            android:gravity="center_vertical">
+	            
+	            <EditText android:layout_width="wrap_content"
+	                android:layout_height="36dp"
+	                android:background="@drawable/input_comment"
+	                android:hint="Say something..."
+	                android:padding="4dp"
+	                android:textColor="@color/edit_text_color"
+	                android:textSize="14sp"/>
+	            
+	            <Button android:layout_width="wrap_content"
+	                android:layout_height="36dp"
+	                android:layout_marginLeft="10.5dp"
+	                android:text="POST"
+	                android:textColor="@color/next_color"
+	                android:background="@drawable/btn_post_detail" />
+	        </LinearLayout>
+	        
+	        <LinearLayout android:id="@+id/comment_container"
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="26.5dp"
+	            android:layout_marginLeft="14dp"
+	            android:layout_marginRight="14dp"
+	            android:orientation="vertical">
+	            
+	            <RelativeLayout android:layout_width="fill_parent"
+	                android:layout_height="wrap_content"
+	                android:layout_marginBottom="21.5dp">
+	                
+	                <ImageView
+	                    android:id="@+id/comment_user_name_image"
+	                    android:layout_width="40dp"
+	                    android:layout_height="40dp"
+	                    android:background="@drawable/round_rect_with_boder"
+	                    android:padding="1dp"
+	                    android:src="@drawable/dummy_post_user_photo" />
+	
+	                <TextView
+	                    android:id="@+id/comment_user_name_text"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_gravity="bottom"
+	                    android:layout_below="@+id/comment_user_name_image"
+	                    android:text="username"
+	                    android:textColor="@color/text_color_black"
+	                    android:textSize="11sp" />
+	                
+	                <TextView
+	                    android:id="@+id/comment_content"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_toRightOf="@+id/comment_user_name_image"
+	                    android:layout_marginLeft="18dp"
+	                    android:text="Delicacies are likely to gather together to attract and provide convenience for customers"
+	                    android:textColor="#363637"
+	                    android:textSize="11sp" />
+	
+	            </RelativeLayout>
+	            
+	            <RelativeLayout android:layout_width="fill_parent"
+	                android:layout_height="wrap_content"
+	                android:layout_marginBottom="21.5dp">
+	                
+	                <ImageView
+	                    android:id="@+id/comment_user_name_image"
+	                    android:layout_width="40dp"
+	                    android:layout_height="40dp"
+	                    android:background="@drawable/round_rect_with_boder"
+	                    android:padding="1dp"
+	                    android:src="@drawable/dummy_post_user_photo" />
+	
+	                <TextView
+	                    android:id="@+id/comment_user_name_text"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_gravity="bottom"
+	                    android:layout_below="@+id/comment_user_name_image"
+	                    android:text="username"
+	                    android:textColor="@color/text_color_black"
+	                    android:textSize="11sp" />
+	                
+	                <TextView
+	                    android:id="@+id/comment_content"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_toRightOf="@+id/comment_user_name_image"
+	                    android:layout_marginLeft="18dp"
+	                    android:text="Delicacies are likely to gather together to attract and provide convenience for customers"
+	                    android:textColor="#363637"
+	                    android:textSize="11sp" />
+	
+	            </RelativeLayout>
+	        </LinearLayout>
+	        
+	    </LinearLayout>
+    </ScrollView>
+</LinearLayout>
