--- a/res/layout/post_story_layout.xml
+++ b/res/layout/post_story_layout.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:geekui="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -9,15 +10,24 @@
     <LinearLayout
         android:id="@+id/intro_info"
         android:layout_width="fill_parent"
-        android:layout_height="100dip"
+        android:layout_height="121dip"
         android:background="@drawable/bg_achievement_detail"
         android:orientation="vertical"
         android:paddingTop="20dip" >
-
+		
         <TextView
             android:id="@+id/input_photo_title"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#ee5458"
+            android:gravity="left|top"
+            android:text="TESTEST TESTETST TITLE" />
+        
+        <TextView
+            android:id="@+id/input_photo_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="#00000000"
             android:gravity="left|top"
             android:text="testest testetst testetst testetst testetst testetst testetst"
@@ -32,18 +42,21 @@
         android:layout_marginLeft="12dip"
         android:layout_marginRight="12dip"
         android:layout_gravity="right"
-        android:text="140 words left" />
+        android:text="500 words left" />
 
     <EditText
         android:id="@+id/input_photo_comments"
         android:layout_width="fill_parent"
-        android:layout_height="63.5dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="4dp"
         android:layout_marginLeft="12dip"
         android:layout_marginRight="12dip"
         android:background="@drawable/round_rect_with_boder"
         android:gravity="left|top"
         android:hint="input description"
-        android:padding="10dip" />
+        android:padding="10dip"
+        android:textColor="@color/edit_text_color"
+        android:textSize="12sp" />
     
     <TextView android:id="@+id/location"
         android:layout_width="fill_parent"
@@ -79,19 +92,23 @@
             android:id="@+id/tag_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:button="@drawable/post_twitter"
-            android:checked="true" >
+            android:layout_marginLeft="6dp"
+            android:button="@drawable/post_twitter" >
         </RadioButton>
     </RadioGroup>
 
-    <Button
+    <com.photowall.widget.typeface.TypefaceTextView
         android:id="@+id/create_btn"
-        android:layout_width="280dip"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
         android:layout_marginTop="10dip"
+        android:layout_marginLeft="12dip"
+        android:layout_marginRight="12dip"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/post_publish"
-        android:gravity="center" />
+        android:gravity="center"
+        android:text="PUBLISH"
+        android:textColor="@color/next_color"
+        geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
 
 </LinearLayout>
