--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -174,6 +174,7 @@
                     android:layout_marginLeft="12dp"
                     android:layout_marginRight="12dp"
                     android:layout_marginTop="12dp"
+                    android:layout_marginBottom="6dp"
                     android:orientation="vertical" >
 
                     <TextView
@@ -259,6 +260,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="6dp"
                 android:background="@drawable/round_rect_with_grey_boder"
                 android:orientation="vertical" >
 
@@ -316,6 +318,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="6dp"
                 android:background="@drawable/round_rect_with_grey_boder"
                 android:orientation="vertical" >
 
